--- a/knn_model.ipynb
+++ b/knn_model.ipynb
@@ -1296,7 +1296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "explainer.dump('num_features.dill')"
+    "explainer.dump('explainer.dill')"
    ]
   },
   {
@@ -1355,7 +1355,7 @@
     }
    ],
    "source": [
-    "db.run(port = 8054)"
+    "db.run(port = 8050)"
    ]
   },
   {
@@ -1413,7 +1413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
@@ -1763,5 +1763,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
